noinst_LIBRARIES = libOpec_ed25519.a
libOpec_ed25519_a_CFLAGS = -std=c++11 \
						  -DASIO_STANDALONE \
						  -I$(top_srcdir)/src/ \
						-I$(top_srcdir)/src/3rd/openssl/include \
						-I$(top_srcdir)/src/3rd/bzip2-1.0.6 \
						-I$(top_srcdir)/src/3rd/zlib-1.2.8 \
							  $(NULL)

libOpec_ed25519_a_SOURCES = ed25519.c

Opecconfigdir             = /etc/Opecconfig
		   


